--- a/app.json
+++ b/app.json
@@ -6,9 +6,9 @@
         "telegram",
         "bot"
     ],
-    "repository": "https://github.com/vasusen-code/SaveRestrictedContentBot",
+    "repository": "https://github.com/laranganmu/SaveRestrictedContentBot",
     "stack": "container",
-    "success_url": "https://t.me/xzmmmmdd_bot",
+    "success_url": "https://t.me/NyidamBOT",
     "env": {
         "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
@@ -33,6 +33,15 @@
         "FORCESUB": {
             "description": "Username name of public channel without using '@'.",
             "value": ""
+        },
+        "buildpacks": [
+        {
+            "url": "heroku/python"
+        },
+        {
+            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
         }
-    }
+    ]
 }
+    }
+    
