--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 #Github.com-Vasusen-code
-ethon==1.3.6
 cryptg
 tgcrypto
 pyrogram==1.4.16
+https://github.com/vasusen-code/Telethon/archive/refs/tags/v1.24.0.zip
+https://github.com/vasusen-code/ethon/archive/refs/tags/v0.1.5.zip
+python-decouple
